[package]
name = "telepathy-rust-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = { version = "0.3.0", default-features = false, features = [
    "curve",
] }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-groth16 = { version = "0.3.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
ethabi = { version = "18.0.0", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.149", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = "1.0.108"
sp-core = "27.0.0"
hex-literal = "0.4.1"
sp-io = "29.0.0"
